tests/baselines/reference/parserErrorRecovery_ClassElement1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ClassElement1.ts (1 errors) ====
    class C {
    
    // Classes can't be nested.  So we should bail out of parsing here and recover
    // this as a source unit element.
    class D {
    ~~~~~
!!! parserErrorRecovery_ClassElement1.ts(5,1): error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    }